--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   path_provider: ^2.0.13
   image_picker: ^0.8.6+3
   cross_file: ^0.3.3+4
+  concentric_transition: ^1.0.3
+  lottie: ^2.2.0
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/animation/
    # - assets/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
