--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^2.8.0
   table_calendar: ^3.0.8
   intl: ^0.17.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
