--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   table_calendar: ^3.0.8
   intl: ^0.17.0
   youtube_player_flutter: ^8.1.2
+  cloud_firestore: ^4.5.2
 
 dev_dependencies:
   flutter_test:
