--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   intl: ^0.17.0
   youtube_player_flutter: ^8.1.2
   cloud_firestore: ^4.5.2
+  google_maps_flutter: ^2.2.6
+  circular_menu: ^2.0.1
 
 dev_dependencies:
   flutter_test:
